# LocalNeuroTelegramBot

./: .gitignore  pom.xml
TelegramBot/: .gitignore
TelegramBot/src/main/java/stuff/: Bot.java  Client.java  Convo.java  Main.java  Server.java
Vessel/: README.md  pyproject.toml  vessel.py
src/main/java/stuff/: Bot.java  Main.java
