[project]
name = "local-talking-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.0",
    "langchain>=0.3.25",
    "nltk>=3.9.1",
    "peft>=0.15.2",
    "rich>=14.0.0",
    "setuptools>=80.9.0",
]

[tool.setuptools]
py-modules = []

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
